--- a/gallery4.html
+++ b/gallery4.html
@@ -50,11 +50,11 @@
                         <ul class="d-flex justify-content-center justify-content-lg-start">
                             <li><a href="javascript:;">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    121 Waldeck Street, NY, USA
+                                    20 Hill Street, Lydney GL15 5HQ
                                 </a></li>
                             <li><a href="javascript:;">
                                     <i class="far fa-clock"></i>
-                                    Mon-Sat: 9am to 6pm
+                                    Tues-Sat: 9am to 6pm
                                 </a></li>
                         </ul>
                     </div>
@@ -624,7 +624,7 @@
                                 <div class="address-content">
                                     <a href="javascript:;">
                                         <span>Address</span>
-                                        121 Waldeck Street, NY, USA
+                                        20 Hill Street, Lydney GL15 5HQ
                                     </a>
                                 </div>
                             </li>
