--- a/gallery-short.html
+++ b/gallery-short.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-   Template Name: Pulchritude Nail art salon and booking HTML Template
+   Template Name: Pulchritude Lydney Nails salon and booking HTML Template
    Version: 1.0.0
    Author: Webstrot
  -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -130,7 +130,7 @@
                                             <li><a href="service.html">Service Page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -273,7 +273,7 @@
                             <li><a href="service.html">Service Page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -656,7 +656,7 @@
                     <ul class="nav nav-pills ">
                         <li class="nav-item"><a class="nav-link active" data-bs-toggle="pill" href="#all_items">All</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" data-bs-toggle="pill" href="#web_design">Nail Art
+                        <li class="nav-item"><a class="nav-link" data-bs-toggle="pill" href="#web_design">Lydney Nails
                                 Design</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" data-bs-toggle="pill" href="#elements">Name of Nail
@@ -682,10 +682,10 @@
                                     </div>
                                     <div class="tab_image_text">
                                         <div class="project_title">
-                                            <h4><a href="javascript:;">Creative Nail Art Design</a></h4>
+                                            <h4><a href="javascript:;">Creative Lydney Nails Design</a></h4>
                                         </div>
                                         <div class="project_category">
-                                            <h4><a href="javascript:;">Nail Art Design</a></h4>
+                                            <h4><a href="javascript:;">Lydney Nails Design</a></h4>
                                         </div>
                                         <div class="project_likes">
                                             <a href="javascript:;"><i class="fas fa-heart-o" aria-hidden="true"></i>
@@ -821,7 +821,7 @@
                                             <h4><a href="javascript:;">Creative Design</a></h4>
                                         </div>
                                         <div class="project_category">
-                                            <h4><a href="javascript:;"> BY Nail Artiest</a></h4>
+                                            <h4><a href="javascript:;"> BY Lydney Nailsiest</a></h4>
                                         </div>
                                         <div class="project_likes">
                                             <a href="javascript:;"><i class="fas fa-heart-o" aria-hidden="true"></i>
@@ -906,7 +906,7 @@
                                     </div>
                                     <div class="tab_image_text">
                                         <div class="project_title">
-                                            <h4><a href="javascript:;">Nail Art Photos</a></h4>
+                                            <h4><a href="javascript:;">Lydney Nails Photos</a></h4>
                                         </div>
                                         <div class="project_category">
                                             <h4><a href="javascript:;">Photos</a></h4>
@@ -932,10 +932,10 @@
                                     </div>
                                     <div class="tab_image_text">
                                         <div class="project_title">
-                                            <h4><a href="javascript:;">Creative Nail Art Design</a></h4>
+                                            <h4><a href="javascript:;">Creative Lydney Nails Design</a></h4>
                                         </div>
                                         <div class="project_category">
-                                            <h4><a href="javascript:;">Nail Art Design</a></h4>
+                                            <h4><a href="javascript:;">Lydney Nails Design</a></h4>
                                         </div>
                                         <div class="project_likes">
                                             <a href="javascript:;"><i class="fas fa-heart-o" aria-hidden="true"></i>
@@ -954,7 +954,7 @@
                                     </div>
                                     <div class="tab_image_text">
                                         <div class="project_title">
-                                            <h4><a href="javascript:;">Complex Nail Art</a></h4>
+                                            <h4><a href="javascript:;">Complex Lydney Nails</a></h4>
                                         </div>
                                         <div class="project_category">
                                             <h4><a href="javascript:;">Development</a></h4>
@@ -1027,7 +1027,7 @@
                                             <h4><a href="javascript:;">Creative Design</a></h4>
                                         </div>
                                         <div class="project_category">
-                                            <h4><a href="javascript:;">Nail Art Design</a></h4>
+                                            <h4><a href="javascript:;">Lydney Nails Design</a></h4>
                                         </div>
                                         <div class="project_likes">
                                             <a href="javascript:;"><i class="fas fa-heart-o" aria-hidden="true"></i>
