--- a/icon.html
+++ b/icon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
-    Template Name: Pulchritude Nail art salon and booking HTML Template
+    Template Name: Pulchritude Lydney Nails salon and booking HTML Template
     Version:1.0.0
     Author:Webstrot
 -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -130,7 +130,7 @@
                                             <li><a href="service.html">Service page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -273,7 +273,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -364,7 +364,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-12 animated wow fade-up" data-wow-delay=".1s">
                     <div class="box box-border ">
                         <p><i class="fas fa-robot icon-1"></i></p>
-                        <h4 class="left_shift"><a href="javascript:;">It is not just nail art,It is ART.</a></h4>
+                        <h4 class="left_shift"><a href="javascript:;">It is not just Lydney Nails,It is ART.</a></h4>
                         <p class="left_shift p-20">Lorem ipsum dolor sit amet elit.Laudantium, placeat quidem? Totam
                             vel nostrum itaque obcaecati vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </p>
@@ -373,7 +373,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="box box-border animated wow fade-up" data-wow-delay=".2s">
                         <p><i class="fas fa-atom icon-1"></i></p>
-                        <h4 class="left_shift"><a href="javascript:;">Imagination is the nail art.</a></h4>
+                        <h4 class="left_shift"><a href="javascript:;">Imagination is the Lydney Nails.</a></h4>
                         <p class="left_shift p-20">Lorem ipsum dolor sit amet elit.Laudantium, placeat quidem? Totam
                             vel nostrum itaque obcaecati vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </p>
@@ -402,7 +402,7 @@
                         <span>
                             <i class="fas fa-chart-pie"></i>
                         </span>
-                        <h4><a href="javascript:;">Nail art is a language</a></h4>
+                        <h4><a href="javascript:;">Lydney Nails is a language</a></h4>
                         <p>Lorem ipsum dolor sit amet elit. Laudantium, placeat quidem?
                             nostrum itaque obcaecati vitae.
                         </p>
