--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-   Template Name: Pulchritude Nail art salon and booking HTML Template
+   Template Name: Pulchritude Lydney Nails salon and booking HTML Template
    Version: 1.0.0
    Author: webstrot
 -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -87,7 +87,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-6 col-sm-6 col-6">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/logo-two.png" alt="logo">
+                            <img src="images/logo.png" alt="logo">
                         </a>
                     </div>
                     <div class="col-xl-8 col-lg-7 col-md-6 d-xl-block d-lg-block d-md-none d-sm-none d-none">
@@ -122,7 +122,7 @@
                                             <li><a href="service.html">Service Page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -271,7 +271,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -353,7 +353,7 @@
                 <div class="item">
                     <div class="slider-wrapper">
                         <div class="slider-img">
-                            <img src="images/bg-slider-three.jpg" alt="img">
+                            <img src="images/bg-slider-three.jpg" alt="img" width="1519" height="1139">
                             <div class="slider-content">
                                 <h1 class="fadeInUpShorter appear-animate">Choose The Best Attitude
                                     And Services</h1>
@@ -377,25 +377,6 @@
                                 <h1 class="fadeInUpShorter appear-animate ">Shine That Brightens
                                     Your Life and You</h1>
                                 <p class="fadeInUpShorter appear-animation-visible appear-animate ">Change Your Nails
-                                    Look With Our Talented Stylists.</p>
-                                <div class="banner-two-btn fadeInUpShorter appear-animation-visible appear-animate">
-                                    <a href="appointment.html" class="main-btn">
-                                        <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>Get
-                                            An Appointment</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="slider-wrapper">
-                        <div class="slider-img">
-                            <img src="images/bg-slider-index-3.jpg" alt="img">
-                            <div class="slider-content">
-                                <h1 class="fadeInUpShorter appear-animate">Get Your Nails Done by A
-                                    Skilled Nail Artist</h1>
-                                <p class="fadeInUpShorter appear-animation-visible appear-animate">Change Your Nails
                                     Look With Our Talented Stylists.</p>
                                 <div class="banner-two-btn fadeInUpShorter appear-animation-visible appear-animate">
                                     <a href="appointment.html" class="main-btn">
@@ -493,7 +474,7 @@
                     <div class="offer-img">
                         <img src="images/offer-3.png" alt="img">
                         <div class="offer-content">
-                            <h3><a href="service-nailart.html">nail Art</a></h3>
+                            <h3><a href="service-nailart.html">Lydney Nails</a></h3>
                         </div>
                     </div>
                 </li>
