--- a/service-nailart.html
+++ b/service-nailart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-   Template Name: Pulchritude Nail art salon and booking HTML Template
+   Template Name: Pulchritude Lydney Nails salon and booking HTML Template
    Version: 1.0.0
    Author: webstrot
 -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -131,7 +131,7 @@
                                             <li><a href="service.html">Service Page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -274,7 +274,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -352,12 +352,12 @@
 
     <div class="inner-page-wrapper float-left">
         <div class="inner-head">
-            <h1>Nail Art Services</h1>
+            <h1>Lydney Nails Services</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="javascript:;">Services</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Nail Art Services</li>
+                    <li class="breadcrumb-item active" aria-current="page">Lydney Nails Services</li>
                 </ol>
             </nav>
         </div>
@@ -397,15 +397,15 @@
                             </div>
                         </div>
                         <div class="service-detail-content">
-                            <h3>NAIL Art TREATMENTS</h3>
-                            <p>Nail art is a creative way to paint, decorate, enhance, and embellish nails.
+                            <h3>Lydney Nails TREATMENTS</h3>
+                            <p>Lydney Nails is a creative way to paint, decorate, enhance, and embellish nails.
                                 It is a type of artwork that can be done on fingernails and toenails,
                                 usually after manicures or pedicures. As time progresses, some people
                                 no longer stick to one color on their nails; instead,
                                 some choose to get more than one color.</p>
 
                             <p class="service-pera">
-                                Nail art is a trend that's not going away any time soon in the
+                                Lydney Nails is a trend that's not going away any time soon in the
                                 fashion and beauty industry. It's a great way to be creative, and
                                 an extra way to show off your personality or dress up that new outfit
                                 you just bought for your bosses Christmas party. It can be expensive
