--- a/service.html
+++ b/service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-    Template Name: Pulchritude Nail art salon and booking HTML Template
+    Template Name: Pulchritude Lydney Nails salon and booking HTML Template
     Version: 1.0.0
     Author: webstrot
 -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -131,7 +131,7 @@
                                             <li><a href="service.html">Service Page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -274,7 +274,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -385,7 +385,7 @@
                                 <li><i class="fas fa-check-square"></i> Color/Gel Removal</li>
                                 <li><i class="fas fa-check-square"></i> Plain Manicure</li>
                                 <li><i class="fas fa-check-square"></i> Single Colour</li>
-                                <li><i class="fas fa-check-square"></i> Nail Art</li>
+                                <li><i class="fas fa-check-square"></i> Lydney Nails</li>
                             </ul>
                         </div>
                         <div class="book-btn">
@@ -405,7 +405,7 @@
                                 <li><i class="fas fa-check-square"></i> Color/Gel Removal</li>
                                 <li><i class="fas fa-check-square"></i> Plain Manicure</li>
                                 <li><i class="fas fa-check-square"></i> Single Colour</li>
-                                <li><i class="fas fa-check-square"></i> Nail Art</li>
+                                <li><i class="fas fa-check-square"></i> Lydney Nails</li>
                             </ul>
                         </div>
                         <div class="book-btn">
@@ -416,7 +416,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="price-box-wrapper">
                         <div class="price-box-head price-response">
-                            <h3> nail arts
+                            <h3> Lydney Nailss
                                 TREATMENTS
                             </h3>
                             <p>From <span>$30.99</span> </p>
@@ -426,7 +426,7 @@
                                 <li><i class="fas fa-check-square"></i> Color/Gel Removal</li>
                                 <li><i class="fas fa-check-square"></i> Plain Manicure</li>
                                 <li><i class="fas fa-check-square"></i> Single Colour</li>
-                                <li><i class="fas fa-check-square"></i> Nail Art</li>
+                                <li><i class="fas fa-check-square"></i> Lydney Nails</li>
                             </ul>
                         </div>
                         <div class="book-btn">
@@ -446,7 +446,7 @@
                                 <li><i class="fas fa-check-square"></i> Color/Gel Removal</li>
                                 <li><i class="fas fa-check-square"></i> Plain Manicure</li>
                                 <li><i class="fas fa-check-square"></i> Single Colour</li>
-                                <li><i class="fas fa-check-square"></i> Nail Art</li>
+                                <li><i class="fas fa-check-square"></i> Lydney Nails</li>
                             </ul>
                         </div>
                         <div class="book-btn">
@@ -524,7 +524,7 @@
                                     </a>
                                 </div>
                                 <div class="service-content">
-                                    <h5>Nail Art</h5>
+                                    <h5>Lydney Nails</h5>
                                 </div>
                             </div>
                         </div>
@@ -593,7 +593,7 @@
                                                 The royal treatment for the hands of a queen.
                                                 Join our membership for extra benefit. Get discount monthly.
                                                 Charming, bubbly, relaxing atmosphere
-                                                Extraordinary nail art designs
+                                                Extraordinary Lydney Nails designs
                                             </p>
                                         </div>
                                         <img src="images/testimonial-2.png" alt="img">
