--- a/testimonial.html
+++ b/testimonial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-   Template Name: Pulchritude Nail art salon and booking HTML Template
+   Template Name: Pulchritude Lydney Nails salon and booking HTML Template
    Version: 1.0.0
    Author: webstort
 -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
@@ -130,7 +130,7 @@
                                             <li><a href="service.html">Service page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -273,7 +273,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Nail Art Service</a></li>
+                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
