--- a/404-error.html
+++ b/404-error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
-   Template Name: Pulchritude Nail art salon and booking HTML Template
+   Template Name: Pulchritude Lydney Nails salon and booking HTML Template
    Version: 1.0.0
    Author: Webstrot
  -->
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nail Art</title>
+    <title>Lydney Nails</title>
     <!-- Animate Css -->
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <!-- Bootstrap Css -->
